WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43530
[Qt] Input mode states are not reset after entering a password field
https://bugs.webkit.org/show_bug.cgi?id=43530
Summary
[Qt] Input mode states are not reset after entering a password field
David Leong
Reported
2010-08-04 18:39:35 PDT
In Qt's implementation of void EditorClientQt::setInputMethodState(bool active), the specific input type is updated based on the input element type attribute to specify vkb handling for number, password or other special input modes. There is a bug in this function where upon entering a password text field the input hit would be set correctly to 'hidden', but entering subsequent normal input elements the state would be stuck in the 'hidden' mode. There are other manifestations of the bug depending on the type of the text field previously entered. The fix is to reset the input method hints whenever EditorClientQt::setInputMethodState(). I will post up a patch as soon as possible.
Attachments
proposed change to reset input modes
(1.77 KB, patch)
2010-08-04 19:11 PDT
,
David Leong
hausmann
: review+
hausmann
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Leong
Comment 1
2010-08-04 18:52:03 PDT
Made a small mistake with the description., the use case is clicking a <input type='password'> field, which sets the input mode to 'hidden'. Next click on a <textarea> and the text area input will be stuck in the password mode.
David Leong
Comment 2
2010-08-04 19:11:02 PDT
Created
attachment 63528
[details]
proposed change to reset input modes The bug happens when the user clicks on a input field with a specific type then clicking on a text area. Because the input hints are never reset the text area inherits the wrong input hints. The fix is to reset the state and set all flags from scratch.
Laszlo Gombos
Comment 3
2010-08-04 20:21:12 PDT
Looks good to me.
Simon Hausmann
Comment 4
2010-08-05 01:03:10 PDT
Comment on
attachment 63528
[details]
proposed change to reset input modes r=me. I'll land it manually together with a unit test.
Simon Hausmann
Comment 5
2010-08-05 02:20:07 PDT
Committed
r64725
: <
http://trac.webkit.org/changeset/64725
>
Simon Hausmann
Comment 6
2010-08-05 02:22:06 PDT
cherry-picked into qtwebkit-4.6 with commit bbff6182e525fcf58dbc7426a1fbbf8f31588214
Simon Hausmann
Comment 7
2010-08-05 05:42:59 PDT
Revision
r64725
cherry-picked into qtwebkit-2.1 with commit b0aea678e59f43c4fcc556d736da887452be5aad
Simon Hausmann
Comment 8
2010-08-05 05:44:59 PDT
Revision
r64725
cherry-picked into qtwebkit-2.0 with commit 31fc031c76110f1e7d8626d930559a8b5f6c8e1d
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug