[Qt] Input mode states are not reset after entering a password field https://bugs.webkit.org/show_bug.cgi?id=43530

Patch by David Leong <david.leong@nokia.com> on 2010-08-05
Reviewed by Simon Hausmann.

Input mode hints are not reset if clicking on password <input> elements then
clicking on <textarea> elements

* WebCoreSupport/EditorClientQt.cpp:
(WebCore::EditorClientQt::setInputMethodState):
* tests/qwebview/resources/input_types.html:
* tests/qwebview/tst_qwebview.cpp:
(tst_QWebView::focusInputTypes):

Canonical link: https://commits.webkit.org/55543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64725 268f45cc-cd09-0410-ab3c-d52691b4dbfc